# django-ldaporm

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  AUTHORS.txt  LICENSE.txt  Makefile  README.md  pylintrc  pyproject.toml  requirements.txt  settings_docs.py  setup.cfg  setup.py
.github/workflows/: compile-requirements.yml
doc/: requirements.txt
doc/source/: compatibility.rst  conf.py  faq.rst  glossary.rst  index.rst
doc/source/api/: fields.rst  forms.rst  managers.rst  models.rst  options.rst  restframework.rst  wildewidgets.rst
doc/source/overview/: configuration.rst  fields.rst  implementation.rst  installation.rst  managers.rst  models.rst  quickstart.rst  restframework.rst  vlv.rst  wildewidgets.rst
doc/source/overview/restframework/: ordering.rst  paging.rst  restframework.rst  serializers.rst  viewsets.rst
doc/source/runbook/: demo.rst  development.rst  testing.rst  troubleshooting.rst
ldaporm/: fields.py  forms.py  ldap.py  managers.py  models.py  options.py  restframework.py  server_capabilities.py  typing.py  validators.py  wildewidgets.py
ldaporm/tests/: __init__.py  basic_test_data.json  test_admin.py  test_f_class.py  test_ldap_manager.py  test_ordering_filter.py  test_restframework.py  test_server_capabilities.py  test_vlv.py  vlv_test_data.json
sandbox/: .autoenv  .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
sandbox/data/ldap/init/: 01-base.ldif  load_data.sh
sandbox/demo/: gunicorn_config.py  logging.py  settings.py  settings_docker.py  settings_test.py  urls.py  wsgi.py
sandbox/demo/api/: README.md  __init__.py  apps.py  serializers.py  urls.py
sandbox/demo/api/tests/: __init__.py  test_api_views.py  test_data.json
sandbox/demo/api/views/: __init__.py  groups.py  roles.py  simple.py  test_ordering.py  users.py
sandbox/demo/core/: admin.py  apps.py  forms.py  urls.py  views.py  wildewidgets.py
sandbox/demo/core/ldap/: models.py  utils.py
sandbox/demo/core/management/commands/: bootstrap.py
sandbox/demo/core/password/: changer.py  random.py  validator.py
sandbox/demo/core/static/core/css/: core.css  core.scss
sandbox/demo/core/templates/core/: base.html
sandbox/demo/core/templates/core/widgets/: user--role.html
sandbox/demo/core/templatetags/: core.py
sandbox/demo/users/: admin.py  apps.py  models.py
sandbox/demo/users/fixtures/: users.json
sandbox/demo/users/migrations/: 0002_load_fixture.py
sandbox/demo/users/templates/registration/: login.html
sandbox/demo/users/templates/users/: intermediate.html
sandbox/etc/: nginx.conf  supervisord.conf
