[project]
name = "demo"
version = "0.1.0"
authors = [
    {name = "Caltech IMSS ADS", email = "imss-ads-staff@caltech.edu"},
]
maintainers = [
    {name = "Chris Malek", email = "cmalek@caltech.edu"},
]
requires-python = ">= 3.10"
description = "Demo app for django-ldaporm"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Topic :: Software Development :: Applications"
]
dependencies = [
    "django>=5.2",
    "django-braces>=1.15.0",
    "django-compressor>=4.5.1",
    "django-crequest==2018.5.11",
    "django-debug-toolbar>=4.4.2",
    "django-environ==0.11.2",
    "django-extensions>=3.2.3",
    "django-filter>=25.1",
    "drf-spectacular>=0.28.0",
    "django-ldaporm",
    "django-theme-academy>=0.3.11",
    "django-wildewidgets>=1.1.0",
    "django-sass-processor==1.4.1",
    "django-xff==1.3.0",
    "crispy-bootstrap5>=2024.10",
    "gunicorn >= 22.0.0",
    "ipython>=7.27.0",
    "libsass==0.23.0",
    "mysqlclient==2.2.6",
    "redis==5.2.1",
    "structlog==24.2.0",
    "tabulate==0.9.0",
    "djangorestframework>=3.16.0",
    "django-filter>=25.1",
]

[tool.uv.sources]
django-ldaporm = { path = "./django-ldaporm.tar.gz" }

[tool.uv]
python-preference = "only-system"

[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
